[gd_scene load_steps=11 format=3 uid="uid://d4ldykuxfsw23"]

[ext_resource type="Script" path="res://Scripts/Level_Scripts/roadside.gd" id="1_13tbk"]
[ext_resource type="Texture2D" uid="uid://gfv0hj1mwk5r" path="res://Assets/Backdrops/road.png" id="1_qpggs"]
[ext_resource type="PackedScene" uid="uid://du3rn8dhpja28" path="res://Scenes/fade.tscn" id="2_hasq1"]
[ext_resource type="Texture2D" uid="uid://b1gaqwsrto2aw" path="res://Assets/Transitions/train_transition.png" id="3_mnydi"]
[ext_resource type="PackedScene" uid="uid://bomie30sx7gp8" path="res://Scenes/character_dialogue.tscn" id="5_v8rwa"]
[ext_resource type="Texture2D" uid="uid://m1i8dkt30itd" path="res://Assets/Characters/bus_stop.png" id="6_njtuw"]
[ext_resource type="Resource" uid="uid://crl2ety31hu51" path="res://Assets/Dialogue/roadside.tres" id="6_uv2cu"]
[ext_resource type="Texture2D" uid="uid://bwj7a5xx5hbfa" path="res://Assets/Characters/Car.png" id="7_ol1xj"]
[ext_resource type="Texture2D" uid="uid://c0r4wvnmq63gx" path="res://Assets/Characters/bus_transition.png" id="8_em5ua"]
[ext_resource type="Texture2D" uid="uid://lh5xwbbcr11c" path="res://Assets/Transitions/nycityintro.png" id="10_vwo2b"]

[node name="Roadside" type="Node2D"]
script = ExtResource("1_13tbk")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1920.0
offset_bottom = 1080.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="TextureRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_qpggs")

[node name="StartFade" parent="Control" instance=ExtResource("2_hasq1")]
visible = false
layout_mode = 1

[node name="TextureRect" parent="Control/StartFade" index="0"]
texture = ExtResource("3_mnydi")

[node name="BusStop" type="TextureButton" parent="Control"]
layout_mode = 0
offset_left = 1006.0
offset_top = 702.0
offset_right = 1175.0
offset_bottom = 810.0
texture_normal = ExtResource("6_njtuw")

[node name="CharacterDialogue" parent="Control" instance=ExtResource("5_v8rwa")]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
offset_left = 320.0
offset_top = -240.0
offset_right = -320.0
data = ExtResource("6_uv2cu")
start_id = "Zac"
options_vertical = true

[node name="BusFade" parent="Control" instance=ExtResource("2_hasq1")]
visible = false
layout_mode = 1
show_next = true

[node name="TextureRect" parent="Control/BusFade" index="0"]
texture = ExtResource("8_em5ua")

[node name="Next" parent="Control/BusFade" index="2"]
z_index = 20

[node name="CarFade" parent="Control" instance=ExtResource("2_hasq1")]
visible = false
layout_mode = 1

[node name="Car" type="TextureButton" parent="Control"]
layout_mode = 0
offset_left = 510.0
offset_top = 628.0
offset_right = 730.0
offset_bottom = 812.0
scale = Vector2(0.8, 0.8)
texture_normal = ExtResource("7_ol1xj")
flip_h = true

[node name="NYCFade" parent="Control" instance=ExtResource("2_hasq1")]
visible = false
layout_mode = 1
show_next = true

[node name="TextureRect" parent="Control/NYCFade" index="0"]
texture = ExtResource("10_vwo2b")

[connection signal="pressed" from="Control/BusStop" to="." method="_on_bus_stop_pressed"]
[connection signal="dialogue_signal" from="Control/CharacterDialogue" to="." method="_on_character_dialogue_dialogue_signal"]
[connection signal="pressed" from="Control/Car" to="." method="_on_car_pressed"]

[editable path="Control/StartFade"]
[editable path="Control/BusFade"]
[editable path="Control/NYCFade"]
